# Mealdoo

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
api/: .env.example  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: bd3148fbe4eb_add_hashed_password_to_users.py  ccf6f81e93f8_add_items_recipes_recipe_items.py  d8421057b3b5_add_receipts_inventory_shopping_list_.py  dd83d18fc35e_create_household_and_member_table.py  e763a9881688_create_users_table.py
api/app/: config.py  db.py  deps.py  main.py  security.py
api/app/models/: __init__.py  household.py  item.py  meal_plan.py  receipt.py  recipe.py  shopping_list.py  user.py
api/app/routers/: households.py  users.py
api/app/schemas/: __init__.py  households.py  users.py
api/tests/: conftest.py  test_users.py
docker/: init-test-db.sql
docs/: database-design.md  schema.dbml
